구글 검색 페이지 완성-사이트 버튼, 검색 디자인 복습하기

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- 메인 -->
     <div class="main_wrap">
       <!-- 로고 -->
-      <img src="images/google_logo.svg" alt="구글로고" />
+      <img src="images/google_logo.svg" alt="구글로고" class="g_logo" />
       <!-- 검색영역 -->
       <div class="search_bar">
         <!-- 검색아이콘 -->
@@ -56,7 +56,70 @@
         </div>
       </div>
       <!-- 사이트버튼 -->
+      <div class="site_list">
+        <ul>
+          <li>
+            <a href="#">
+              <div class="btn_bg">
+                <img src="images/naver.png" alt="네이버" />
+              </div>
+              <span>말줄임 표시 합니다.</span>
+            </a>
+            <span class="hover_bg">
+              <img src="images/icon_more_vert.svg" alt="더보기" title="네이버 바로가기 추가 작업" />
+            </span>
+          </li>
+          <li>
+            <a href="#">
+              <div class="btn_bg">
+                <img src="images/naver.png" alt="네이버" />
+              </div>
+              <span>말줄임 표시 합니다.</span>
+            </a>
+            <span class="hover_bg">
+              <img src="images/icon_more_vert.svg" alt="더보기" />
+            </span>
+          </li>
+          <li>
+            <a href="#">
+              <div class="btn_bg">
+                <img src="images/naver.png" alt="네이버" />
+              </div>
+              <span>말줄임 표시 합니다.</span>
+            </a>
+            <span class="hover_bg">
+              <img src="images/icon_more_vert.svg" alt="더보기" />
+            </span>
+          </li>
+          <li>
+            <a href="#">
+              <div class="btn_bg">
+                <img src="images/naver.png" alt="네이버" />
+              </div>
+              <span>말줄임 표시 합니다.</span>
+            </a>
+            <span class="hover_bg">
+              <img src="images/icon_more_vert.svg" alt="더보기" />
+            </span>
+          </li>
+          <li>
+            <a href="#">
+              <div class="btn_bg">
+                <img src="images/naver.png" alt="네이버" />
+              </div>
+              <span>말줄임 표시 합니다.</span>
+            </a>
+            <span class="hover_bg">
+              <img src="images/icon_more_vert.svg" alt="더보기" />
+            </span>
+          </li>
+        </ul>
+      </div>
       <!-- 검색버튼 -->
+      <div class="s_btn">
+        <button>Google 검색</button>
+        <button>I'm Feeling Lucky</button>
+      </div>
     </div>
   </body>
 </html>
