--- a/login.html
+++ b/login.html
@@ -19,21 +19,11 @@
       <form>
         <div class="input_group">
           <label for="userName"><i class="fa-solid fa-user"></i></label>
-          <input
-            type="text"
-            id="userName"
-            placeholder="이름을 입력하세요."
-            onfocus="this.placeholder=''"
-            onblur="this.placeholder='이름을 입력하세요'" />
+          <input type="text" id="userName" placeholder="이름을 입력하세요." />
         </div>
         <div class="input_group">
           <label for="userEmail"><i class="fa-solid fa-envelope"></i></label>
-          <input
-            type="email"
-            id="userEmail"
-            placeholder="E-mail을 입력하세요."
-            onfocus="this.placeholder=''"
-            onblur="this.placeholder='E-mail을 입력하세요.'" />
+          <input type="email" id="userEmail" placeholder="E-mail을 입력하세요." />
         </div>
         <div class="input_group">
           <label for="userPW1"><i class="fa-solid fa-lock"></i></label>
@@ -44,7 +34,7 @@
           <input type="password" id="userPW2" placeholder="비밀번호 확인" />
         </div>
         <button type="submit">가입하기</button>
-        <button type="button">공지사항</button>
+        <button type="button" onclick="window.open('notice.html')">공지사항</button>
       </form>
     </div>
   </body>
